--- a/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_02/Ejercicios_Workout/09_Ejercicios_Python_Basisc_I_1.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_02/Ejercicios_Workout/09_Ejercicios_Python_Basisc_I_1.ipynb
@@ -188,6 +188,10 @@
     "Dirección = \"Mi dirección es calle %s, número %s en el código postal %s de %s\" %(Nombre_calle,Numero_calle,CP,Población)\n",
     "#Imprimo mi variable\n",
     "print (Dirección)\n",
+    "\"\"\"\n",
+    "El programa permite concatenar una serie de variables, definidas previamente, en el orden que establezcamos al definirla. \n",
+    "En el paréntesis, introduzco la variable a imprimir, según el orden de los %s \n",
+    "\"\"\"\n",
     "\n"
    ]
   },
