--- a/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_02/Ejercicios_Workout/10_Ejercicios_Python_Basisc_I_2.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_02/Ejercicios_Workout/10_Ejercicios_Python_Basisc_I_2.ipynb
@@ -61,10 +61,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'float'>\n",
+      "<class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "años_Lucas = 10\n",
+    "años_Tomas = 5.5\n",
+    "print(type(años_Lucas))\n",
+    "print(type(años_Tomas))\n",
+    "años_misniños = años_Lucas + años_Tomas\n",
+    "print(type(años_misniños))\n",
+    "del años_Lucas, años_Tomas"
+   ]
   },
   {
    "attachments": {
@@ -85,10 +103,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Indica los grados a convertir 2\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "can't multiply sequence by non-int of type 'float'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m pi \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m3.1416\u001b[39m\n\u001b[0;32m      3\u001b[0m pi_int \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;241m3.1416\u001b[39m)\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m (\u001b[43mgrados_ejercicio\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mpi_int\u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;241;43m180\u001b[39;49m\u001b[43m)\u001b[49m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: can't multiply sequence by non-int of type 'float'"
+     ]
+    }
+   ],
+   "source": [
+    "grados_ejercicio = input (\"Indica los grados a convertir\")\n",
+    "pi = 3.1416\n",
+    "pi_int = int(3.1416)\n",
+    "print (grados_ejercicio*(pi_int/180))\n"
+   ]
   },
   {
    "attachments": {
@@ -151,22 +193,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "¿Cuál es tu nombre?  Sara\n",
+      "¿Cuál es tu edad?  43\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sara, naciste en el año 1981.\n"
+     ]
+    }
+   ],
    "source": [
-    "nombre = _______(\"¿Cuál es tu nombre? \")\n",
-    "edad = _____(input(\"¿Cuál es tu edad? \"))\n",
+    "nombre = input(\"¿Cuál es tu nombre? \")\n",
+    "edad = int(input(\"¿Cuál es tu edad? \"))\n",
     "año_actual = 2024  # Puedes cambiarlo según el año en curso\n",
-    "año_nacimiento = año_actual - _____\n",
+    "año_nacimiento = año_actual - edad\n",
     "\n",
     "print(f\"{nombre}, naciste en el año {año_nacimiento}.\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Curso_Online_DATA",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -180,10 +245,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
-  },
-  "orig_nbformat": 4
+   "version": "3.13.0"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
