Ejercicio_Workout_Python2

--- a/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_02/Ejercicios_Workout/10_Ejercicios_Python_Basisc_I_2.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_02/Ejercicios_Workout/10_Ejercicios_Python_Basisc_I_2.ipynb
@@ -103,14 +103,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Indica los grados a convertir 2\n"
+      "Por favor, indica -ultilizando la expresión decimal- los grados a convertir 2.0\n"
      ]
     },
     {
@@ -120,16 +120,16 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[11], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m pi \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m3.1416\u001b[39m\n\u001b[0;32m      3\u001b[0m pi_int \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;241m3.1416\u001b[39m)\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m (\u001b[43mgrados_ejercicio\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mpi_int\u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;241;43m180\u001b[39;49m\u001b[43m)\u001b[49m)\n",
+      "Cell \u001b[1;32mIn[5], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m grados \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPor favor, indica -ultilizando la expresión decimal- los grados a convertir\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      2\u001b[0m pi \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m3.1416\u001b[39m\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m ((\u001b[43mgrados\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mpi\u001b[49m) \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m180.0\u001b[39m)\n",
       "\u001b[1;31mTypeError\u001b[0m: can't multiply sequence by non-int of type 'float'"
      ]
     }
    ],
    "source": [
-    "grados_ejercicio = input (\"Indica los grados a convertir\")\n",
+    "grados = input (\"Por favor, indica -ultilizando la expresión decimal- los grados a convertir\")\n",
     "pi = 3.1416\n",
-    "pi_int = int(3.1416)\n",
-    "print (grados_ejercicio*(pi_int/180))\n"
+    "\n",
+    "print ((grados * pi) /180.0)\n"
    ]
   },
   {
@@ -149,10 +149,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Indica, por favor, la base de tu paralelogramo 15\n",
+      "Indica ahora, la altura 15\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "225\n"
+     ]
+    }
+   ],
+   "source": [
+    "Base = input (\"Indica, por favor, la base de tu paralelogramo\")\n",
+    "Altura = input (\"Indica ahora, la altura\")\n",
+    "print (int(Base)*int(Altura))"
+   ]
   },
   {
    "attachments": {
@@ -245,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
