--- a/02_Programacion_y_Herramientas_Avanzadas/Sprint_03 (TEORIA)/Unidad_01_Python_Basic_IV_y_Herramientas_avanzadas__Numpy_I/Matrices.ipynb
+++ b/02_Programacion_y_Herramientas_Avanzadas/Sprint_03 (TEORIA)/Unidad_01_Python_Basic_IV_y_Herramientas_avanzadas__Numpy_I/Matrices.ipynb
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,10 +292,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Rodrigo': [0.0, 6.0, 10.0],\n",
+       " 'Lucia': [7.6, 3.2, 9.2],\n",
+       " 'Alejandro': [2.2, 7.3, 8.2],\n",
+       " 'Valeria': [10.0, 11.7, 1.0],\n",
+       " 'Javier': [7.1, 5.1, 6.4],\n",
+       " 'Camila': [2.8, 4.5, 8.1],\n",
+       " 'Diego': [6.7, 6.7, 4.5],\n",
+       " 'Gabriela': [6.0, 0.0, 11.2],\n",
+       " 'Mateo': [10.0, 11.2, 0.0],\n",
+       " 'Sofía': [10.4, 10.4, 2.0]}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diccionario_reparto"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -327,10 +349,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[2, 1, 0.5],\n",
+       " [1, 2, 0.5],\n",
+       " [2, 1, 0.5],\n",
+       " [1, 0.5, 2],\n",
+       " [0.5, 2, 1],\n",
+       " [2, 1, 0.5],\n",
+       " [0.5, 1, 2],\n",
+       " [1, 2, 0.5],\n",
+       " [1, 0.5, 2],\n",
+       " [0.5, 1, 2]]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matriz_resultado = []\n",
+    "\n",
+    "for alumno, distancias in diccionario_reparto.items():\n",
+    "    vector_asignacion = []\n",
+    "    maximo = max(distancias)\n",
+    "    minimo = min(distancias)\n",
+    "    maximo_asignado = False\n",
+    "    minimo_asignado = False\n",
+    "    for indice, curso in enumerate (curso_asignado): \n",
+    "        distancia = distancias[indice]\n",
+    "        if distancia == maximo and not maximo_asignado:\n",
+    "            vector_asignacion.append(0.5)\n",
+    "            maximo_asignado = True\n",
+    "        elif distancia == minimo and not minimo_asignado: \n",
+    "            vector_asignacion.append(2)\n",
+    "            minimo_asignado = True\n",
+    "        else:\n",
+    "            vector_asignacion.append(1)\n",
+    "\n",
+    "    matriz_resultado.append(vector_asignacion)\n",
+    "\n",
+    "matriz_resultado\n",
+    "        "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -357,25 +423,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n"
+    "matriz_resultado[7][2]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matriz_resultado[0][0]"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Intenta acceder a diferentes posiciones por ejemplo las horas de CAI que le otorgamos a Rodrigo, que deberían ser las máximas, las horas de RE de Javier, etc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matriz_resultado[4][1]"
    ]
   },
   {
