--- a/02_Programacion_y_Herramientas_Avanzadas/Sprint_04 (TEORIA)/Unidad_01_Herramientas_Avanzadas__Pandas_I/01_Series.ipynb
+++ b/02_Programacion_y_Herramientas_Avanzadas/Sprint_04 (TEORIA)/Unidad_01_Herramientas_Avanzadas__Pandas_I/01_Series.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +379,8 @@
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -630,13 +631,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
    "outputs": [
@@ -712,7 +706,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
