--- a/02_Programacion_y_Herramientas_Avanzadas/Sprint_04 (TEORIA)/Unidad_01_Herramientas_Avanzadas__Pandas_I/02_Series_II.ipynb
+++ b/02_Programacion_y_Herramientas_Avanzadas/Sprint_04 (TEORIA)/Unidad_01_Herramientas_Avanzadas__Pandas_I/02_Series_II.ipynb
@@ -16,99 +16,395 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Operaciones entre DataFrame y Series: Alineación de índices\n",
-    "\n",
-    "Cuando se realizan operaciones entre un ``DataFrame`` y una ``Serie``, la alineación de los índices y las columnas se mantiene de forma similar.\n",
-    "Las operaciones entre un ``DataFrame`` y una ``Serie`` son similares a las operaciones entre un array bidimensional y uno unidimensional de NumPy."
+    "## Pandas: Series (II)\n",
+    " \n",
+    "Recordando de la píldora anterior, una ``Serie`` de Pandas es un array unidimensional de datos indexados.\n",
+    "Se puede crear a partir de una lista o un array de la siguiente manera:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Avatar                  2923\n",
+       "Vengadores: End Game    2799\n",
+       "Avatar II               2320\n",
+       "Titanic                 2264\n",
+       "SW VII                  2071\n",
+       "Name: top5, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "df_A = pd.DataFrame(np.random.randint(0,10,(3,4)), columns = [\"A\",\"B\",\"C\",\"D\"], \n",
-    "index = [\"1a\",\"2a\",\"3a\"])\n",
-    "df_A"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Restar una fila del resto de un dataframe\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Restar una columna del resto\n"
+    "top5 =pd.Series([2923, 2799, 2320, 2264, 2071], \n",
+    "                 index = [\"Avatar\", \"Vengadores: End Game\", \"Avatar II\", \"Titanic\", \"SW VII\"])\n",
+    "top5.name = \"top5\"\n",
+    "top5"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ten en cuenta que estas operaciones ``DataFrame``/``Series``, al igual que las operaciones comentadas anteriormente, alinearán automáticamente los índices entre los dos elementos: "
+    "### ``Series`` como array NumPy "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Esta preservación y alineación de índices y columnas significa que las operaciones sobre los datos en Pandas siempre mantendrán el contexto de los datos, lo que evita los tipos de errores tontos que podrían surgir al trabajar con datos heterogéneos y/o mal alineados en arrays NumPy en bruto."
+    "Por lo que hemos visto hasta ahora, puede parecer que el objeto ``Series`` es básicamente intercambiable con un array unidimensional de NumPy.\n",
+    "**La diferencia esencial es la presencia del índice**: mientras que el array de Numpy tiene un índice entero *implícitamente definido* que se utiliza para acceder a los valores, las ``Series`` de Pandas tienen un índice ***explícitamente definido*** asociado a los valores.\n",
+    "\n",
+    "Esta definición explícita del índice proporciona al objeto ``Series`` capacidades adicionales. Por ejemplo, el índice no necesita ser un entero, sino que puede consistir en valores de cualquier tipo deseado.\n",
+    "Por ejemplo, **si lo deseamos, podemos utilizar cadenas como índice:**\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(2320)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top5.iloc[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(2320)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top5.loc[\"Avatar II\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(2320)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top5[\"Avatar II\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Y el acceso al artículo funciona como se esperaba:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
+   "outputs": [],
+   "source": [
+    "serie_test = pd.Series([2300, 1200, 1200, 1222])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    2300\n",
+      "1    1200\n",
+      "2    1200\n",
+      "3    1222\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(serie_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pero lo más interesante, como array subyacente que es, se pueden aplicar todos los métodos de los array de numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(serie_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RangeIndex(start=0, stop=4, step=1)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "serie_test.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2923\n",
+      "2071\n",
+      "12377\n",
+      "2475.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(top5.max())\n",
+    "print(top5.min())\n",
+    "print(top5.sum())\n",
+    "print(top5.mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(top5.argmax())\n",
+    "print(top5.argmin())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Avatar\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(top5.idxmax())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SW VII\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(top5.idxmin())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2923, 2799, 2320, 2264, 2071]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(top5.to_list())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para terminar, recordemos que, de nuevo como array que son, el slicing crea vistas y que si queremos copias que no interfieran con la Series original es neceario hacer uso del método copy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Titanic    2264\n",
+      "SW VII     2071\n",
+      "Name: top5, dtype: int64\n",
+      "Titanic    2264\n",
+      "SW VII     2071\n",
+      "Name: top5, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "top_vista = top5[3:]\n",
+    "top_vista_copy = top5[3:].copy()\n",
+    "print(top_vista)\n",
+    "print(top_vista_copy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Titanic    1000\n",
+      "SW VII     2071\n",
+      "Name: top5, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "top_vista_copy[\"Titanic\"] = 1000\n",
+    "print(top_vista_copy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Titanic    1000\n",
+      "SW VII     2071\n",
+      "Name: top5, dtype: int64\n",
+      "Avatar                  2923\n",
+      "Vengadores: End Game    2799\n",
+      "Avatar II               2320\n",
+      "Titanic                 1000\n",
+      "SW VII                  2071\n",
+      "Name: top5, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "top_vista[\"Titanic\"] = 1000\n",
+    "print(top_vista)\n",
+    "print(top5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -127,7 +423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
