--- a/02_Programacion_y_Herramientas_Avanzadas/Sprint_04 (TEORIA)/Unidad_02_Herramientas_Avanzadas__Pandas_II/05_Duplicados.ipynb
+++ b/02_Programacion_y_Herramientas_Avanzadas/Sprint_04 (TEORIA)/Unidad_02_Herramientas_Avanzadas__Pandas_II/05_Duplicados.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +407,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -421,7 +421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
